# autoresearch-ant-detection

./: .gitignore  LICENSE  README.md  journal.md  prepare.py  program.md  pyproject.toml  results.tsv  strategy.md  train.py
.data/: README.md
